final-devops-project/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskboard-k8s
  labels:
    app.kubernetes.io/part-of: taskboard
