final-devops-project/kubernetes/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: taskboard-k8s
  labels: {app: backend}
spec:
  replicas: 2
  selector:
    matchLabels: {app: backend}
  template:
    metadata:
      labels: {app: backend}
    spec:
      securityContext: {runAsNonRoot: true, runAsUser: 10001}
      containers:
        - name: backend
          image: ghcr.io/ankit14-dev/taskboard-backend:latest
          ports: [{name: http, containerPort: 8000}]
          startupProbe:
            httpGet: {path: /health, port: http}
            periodSeconds: 3
            failureThreshold: 40
          readinessProbe:
            httpGet: {path: /ready, port: http}     # checks the DB connection too
            periodSeconds: 5
          livenessProbe:
            httpGet: {path: /health, port: http}
            periodSeconds: 10
          resources:
            requests: {cpu: 100m, memory: 128Mi}
            limits: {cpu: 500m, memory: 256Mi}
          securityContext: {allowPrivilegeEscalation: false, capabilities: {drop: ["ALL"]}}
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: taskboard-k8s
spec:
  selector: {app: backend}
  ports: [{name: http, port: 8000, targetPort: http}]
