final-devops-project/kubernetes/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskboard
  namespace: taskboard-k8s
spec:
  ingressClassName: nginx
  rules:
    - host: taskboard-k8s.192.168.49.2.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend: {service: {name: backend, port: {number: 8000}}}
          - path: /
            pathType: Prefix
            backend: {service: {name: frontend, port: {number: 80}}}
